k8s/argocd/deployment-argo-cd-argocd-server.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: server
        args:
        - /usr/local/bin/argocd-server
        - --port=8080
        - --metrics-port=8083
        - --insecure
