k8s/argocd/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: argo-cd-argocd-server
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: gateway-system
  hostnames:
  - "argocd.meatcloud.io"
  rules:
  - backendRefs:
    - name: argo-cd-argocd-server
      port: 80
    - name: argo-cd-argocd-server
      port: 443
